ペット情報取得のスキーマ追加
